vertical align/mobile fix

--- a/reg/static/stylesheets/index.css
+++ b/reg/static/stylesheets/index.css
@@ -49,6 +49,13 @@ section#main{
   min-height: 75vh;
 }
 
+section#main.ui.page.grid {
+  position:absolute;
+  width:100%;
+  height:50%;
+  top:25%;
+}
+
 .logo {
   height: 5em;
   width: 5em;
@@ -124,7 +131,6 @@ button.outline:focus {
 section#info {
   background: rgba(255,255,255,.85);
   min-height: 240px;
-  height: 25vh;
   text-align: center;
   color: black;
   padding: 100px 16px;
@@ -200,7 +206,7 @@ section#register {
 }
 
 section#register .tagline {
-margin-bottom: 50px;
+margin-bottom: 30px;
 }
 
 
